Fixing text wrap in badge display.
git-svn-id: https://svn-1.prod.hosting.acquia.com/opensource/trunk@1301 ba871ea3-d002-4683-b738-bf6965e0a2a8

--- a/local/sites/all/themes/sitetheme/css/comments.css
+++ b/local/sites/all/themes/sitetheme/css/comments.css
@@ -176,15 +176,16 @@ ul.links .flag-comment_abuse
 
 /* Badge Display for Text in Comments */
 .comment .badge-role {
-  width: 46px;
-  height: 16px;
   background-color: #E1432B;
   color: white;
   font-family: sans-serif;
-  font-size: 10px;
+  font-size: 8px;
   font-weight: bold;
+  height: 16px;
+  line-height: 10px;
   padding: 2px;
   text-align: center;
+  width: 46px;
 }
 
 .comment .badge-wrapper {
@@ -196,7 +197,7 @@ ul.links .flag-comment_abuse
   background-color: #8BAA4A;
   color: white;
   font-family: sans-serif;
-  font-size: 10px;
+  font-size: 9px;
   font-weight: bold;
   padding: 2px;
   text-align: center;
